feat: implementar otimizações mobile para melhorar responsividade  - Adicionar arquivo mobile.css com media queries específicas para corrigir problemas de sobreposição e layout - Implementar mobile-optimizations.js para ajustes dinâmicos em dispositivos móveis - Corrigir posicionamento dos cards de estatísticas em telas pequenas - Otimizar animações e efeitos visuais para melhor performance em dispositivos móveis - Melhorar comportamento do menu mobile e do chatbot - Adicionar ajustes específicos para iOS (problema de viewport e aceleração de hardware) - Incluir meta tags para melhor experiência em dispositivos touch  Estas alterações mantêm a estética original do site enquanto resolvem problemas específicos de sobreposição de elementos e melhoram a experiência geral em smartphones e tablets.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Soluctions S.A - Transformação digital inteligente para empresas que querem dominar o mercado digital">
+  <meta name="format-detection" content="telephone=no">
   <title>Soluctions | Transformação Digital Inteligente</title>
   
   <!-- Preload fontes essenciais para melhorar performance -->
@@ -21,6 +22,8 @@
   
   <!-- CSS Customizado -->
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/mobile.css">
+
   
   <!-- GSAP para animações avançadas -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" defer></script>
@@ -1248,6 +1251,8 @@
   
   <!-- Main JS -->
   <script src="js/main.js" defer></script>
+  <script src="js/mobile-optimizations.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js" defer></script>
 </body>
 
 </html>
