fix: otimizar layout mobile para corrigir problemas de sobreposição  - Reorganiza os cards estatísticos em grid abaixo da imagem principal - Atualiza a imagem da seção hero para uma alternativa de alta qualidade - Corrige a visualização do chatbot em dispositivos móveis - Adiciona meta tags específicas para otimização mobile - Implementa ajustes de CSS para manter a estética futurista em telas pequenas - Adiciona JavaScript para melhorar a experiência do usuário em dispositivos touch - Preserva o estilo cyberpunk enquanto melhora a usabilidade  Esta implementação resolve problemas específicos de sobreposição de elementos e mantém a consistência visual entre as versões desktop e mobile.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="description" content="Soluctions S.A - Transformação digital inteligente para empresas que querem dominar o mercado digital">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
+  <meta name="theme-color" content="#050510"> <!-- Cor da barra de status em navegadores mobile -->
   <title>Soluctions | Transformação Digital Inteligente</title>
   
   <!-- Preload fontes essenciais para melhorar performance -->
@@ -160,10 +161,11 @@
               <div class="cyber-card-border absolute inset-0 bg-gradient-to-r from-blue-500 to-purple-600 rounded-xl z-0"></div>
               <div class="cyber-card-glitch absolute inset-0 rounded-xl z-0"></div>
               <div class="cyber-card-content relative z-10 p-1 rounded-xl overflow-hidden shadow-neon-blue">
-                <img src="https://cdn.pixabay.com/photo/2018/02/16/10/52/business-3157758_960_720.jpg" alt="Digital Marketing" class="w-full h-auto rounded-lg hover-lift">
+                <img src="https://cdn.pixabay.com/photo/2018/03/01/09/33/business-3190209_1280.jpg" alt="Digital Marketing" class="w-full h-auto rounded-lg hover-lift">
               </div>
               
               <!-- Stat cards -->
+              <div class="cyber-stats-wrapper">
               <div class="cyber-stats-card absolute -bottom-5 -left-5 bg-gray-900 bg-opacity-80 backdrop-filter backdrop-blur-md border border-blue-500 p-4 rounded-lg shadow-neon-blue z-20">
                 <div class="flex items-center space-x-3">
                   <div class="h-10 w-10 rounded-full bg-blue-900 flex items-center justify-center">
@@ -189,6 +191,7 @@
               </div>
             </div>
           </div>
+        </div>
         </div>
         
         <!-- Feature cards -->
